--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "callback": "node src/callback/challenge.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/kgcoro/asynchronism-course/issues"
   },
-  "homepage": "https://github.com/kgcoro/asynchronism-course#readme"
+  "homepage": "https://github.com/kgcoro/asynchronism-course#readme",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
